# MeshRotator

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: main.yml
analytics/: build.gradle.kts
analytics-api/: build.gradle.kts
analytics-api/src/main/java/com/mistersomov/analytics_api/data/model/: Parameters.kt
analytics-api/src/main/java/com/mistersomov/analytics_api/domain/: FirstLaunchPrefs.kt
analytics-api/src/main/java/com/mistersomov/analytics_api/domain/repository/: AnalyticsRepository.kt
analytics/src/main/java/com/mistersomov/analytics/data/repository/: AnalyticsRepositoryImpl.kt
analytics/src/main/java/com/mistersomov/analytics/di/: AnalyticsModule.kt
analytics/src/main/java/com/mistersomov/analytics/domain/: FirstLaunchPrefsImpl.kt
app/: CMakeLists.txt  build.gradle.kts  google-services.json
app/src/androidTest/java/com/mistersomov/meshrotator/: NativeTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/: baseGeom.frag  baseGeom.vert  baseLighting.frag  baseLighting.vert  cube.frag  cube.vert  framebufferScreen.frag  framebufferScreen.vert  framebuffer_screen.frag  framebuffer_screen.vert  lighting.frag  lighting.vert  normalVisualization.frag  normalVisualization.geom  normalVisualization.vert  outlined.frag  skinning.vert  skybox.frag  skybox.vert
app/src/main/cpp/: Renderer.cpp  Renderer.hpp  main.cpp
app/src/main/cpp/manager/: AssetManager.cpp  AssetManager.hpp  ModelManager.cpp  ModelManager.h  ModelManager.hpp
app/src/main/cpp/model/aircraft/: Aircraft.cpp  Aircraft.hpp
app/src/main/cpp/scene/: MainScene.cpp  MainScene.hpp  Scene.cpp  Scene.hpp  Skybox.cpp  Skybox.hpp
app/src/main/cpp/scene/initializer/: LightInitializer.hpp  ModelInitializer.hpp  ShaderInitializer.hpp
app/src/main/cpp/utils/: AndroidOut.h  Utility.hpp
app/src/main/java/com/mistersomov/meshrotator/: MainActivity.kt  MeshRotatorApp.kt
app/src/main/res/layout/: main_scene_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
build-logic/: gradle.properties
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApiConventionPlugin.kt  AndroidAppComposeConventionPlugin.kt  AndroidAppConventionPlugin.kt  AndroidCoreConventionPlugin.kt  AndroidLibraryComposeConventionPlugin.kt  AndroidLibraryConventionPlugin.kt
build-logic/convention/src/main/kotlin/com/mistersomov/convention/: AndroidCompose.kt  KotlinAndroid.kt
build-logic/convention/src/main/kotlin/com/mistersomov/convention/utils/: Extension.kt
common/design/: build.gradle.kts
common/design/src/main/java/com/mistersomov/design/component/joystick/: VirtualJoystick.kt
common/design/src/main/res/values/: dimens.xml  styles.xml
common/ndk_helper/: CMakeLists.txt  build.gradle.kts
common/ndk_helper/src/main/cpp/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Model_Impl.cpp  Model_Impl.hpp  NDKHelper.hpp  Shader.cpp  Shader.hpp
common/ndk_helper/src/main/cpp/core/: Body.cpp  Body.hpp  Bone.cpp  Bone.hpp  Camera.cpp  Camera.hpp  CoreBody.cpp  CoreBody.hpp  CoreLight.cpp  CoreLight.hpp  CoreModel.cpp  CoreModel.hpp  Light.hpp  Material.hpp  SkinnedBody.cpp  SkinnedBody.hpp  Texture.hpp  Transformation.hpp
common/ndk_helper/src/main/cpp/light/: DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp
common/ndk_helper/src/main/cpp/manager/: AssetManager.cpp  AssetManager.hpp  ModelManager.cpp  ModelManager.hpp  ShaderManager.cpp  ShaderManager.hpp  TimeManager.cpp  TimeManager.hpp
common/ndk_helper/src/main/cpp/material/: MaterialC.hpp  PbrMaterial.hpp  PhongMaterial.hpp
common/ndk_helper/src/main/cpp/test/: Model_ImplTest.cpp
common/ndk_helper/src/main/cpp/test/mock/: MeshMock.hpp
common/ndk_helper/src/main/cpp/utils/: AndroidOut.cpp  AndroidOut.hpp  AssimpHelper.cpp  AssimpHelper.hpp  AssimpUtility.cpp  AssimpUtility.hpp  Cache.hpp  Constants.hpp  GlmUtility.cpp  GlmUtility.hpp  Utility.cpp  Utility.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native-testing/: CMakeLists.txt  build.gradle.kts
native-testing/src/main/cpp/ndk-helper/: ModelTest.cpp
native-testing/src/main/cpp/ndk-helper/mock/: MeshMock.hpp
